--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ wp-content/uploads/
 wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
 wp-content/themes/ZRPat/node_modules/
+wp-config.php
 
 /.htaccess
 /license.txt
