--- a/wp-content/themes/ZRPat/package.json
+++ b/wp-content/themes/ZRPat/package.json
@@ -17,5 +17,9 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-util": "^3.0.8"
+  },
+  "dependencies": {
+    "natives": "^1.1.4",
+    "node-sass": "^4.9.2"
   }
 }
